--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -220,7 +220,7 @@ crossorigin=""/>
     <span lang="fr">La première intervient lors de la création d’un parfum. Dans le cas où ce parfum entrera en contact avec la peau, il existe deux types de produits : </span>
     <span lang="en">The first one occurs during the creation of a perfume. In the event that this perfume gets in contact with the skin, there are two types of products :</span>
 
-    <ul class="categorieparfum">
+    <ul class="categorieparfum" style="font-size: 0.8em;">
       <li>
         <span lang="fr">Les produits dits « <b>rincés</b> » (shampoings, gels douche…). Ces produits ne sont pas destinés à rester en contact avec la peau après leur utilisation. </span>
         <span lang="en">So-called « <b>rinced</b> » products (shampoos, shower gels…). These products are not to stay on the skin after usage.</span>
