--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -234,9 +234,9 @@ crossorigin=""/>
   
 
   <p>
-    <span lang="fr">Dans les produits rincés, la présence d’un allergène ne doit pas excéder 100 ppm (soit 0,01%) dans le produit fini. Dans les produits non-rincés, cette présence ne doit pas excéder 10 ppm (0,001%).
+    <span lang="fr">Dans les produits rincés, la présence d’un allergène ne doit pas excéder <b>100 ppm</b> (soit 0,01%) dans le produit fini. Dans les produits non-rincés, cette présence ne doit pas excéder <b>10 ppm</b> (0,001%).
     <br>Par ailleurs, tout allergène présent à un taux supérieur à celui recommandé entraine sa mention sur le packaging du produit.</span>
-    <span lang="en">In rinsed products, the presence of an allergen must not exceed 100 ppm (i.e. 0.01%) in the finished product. In non-rinsed products, the presence of an allergen shall not exceed 10 ppm (0.001%). 
+    <span lang="en">In rinsed products, the presence of an allergen must not exceed <b>100 ppm</b> (i.e. 0.01%) in the finished product. In non-rinsed products, the presence of an allergen shall not exceed <b>10 ppm</b> (0.001%). 
     <br>In addition, any allergen used at a higher level than the recommended one must be mentioned on the product packaging.</span>
   </p>
 
@@ -362,6 +362,28 @@ crossorigin=""/>
       <li style="overflow-wrap: break-word;"><a href="https://www.ecomundo.eu/fr/blog/allergenes-cosmetique-conformite" target="_blank">https://www.ecomundo.eu/fr/blog/allergenes-cosmetique-conformite</a></li>
     </ul>
   </p>
+
+  <hr>
+
+<div>
+    <span lang="fr"><u>Découvrez nos autres articles :</u></span>
+    <span lang="en"><u>Get to read our other articles :</u></span>
+    <ul class="particulier">
+      <li>
+        <a href="../_/ingredientparfums.html">
+          <span lang="fr"> Découvrez tous les secrets des ingredients de vos parfums !</span> 
+          <span lang="en"> Discover more about your perfume ingredients !</span>
+        </a>
+      </li>
+      <li>
+        <a href="../_/creationparfums.html">
+          <span lang="fr"> Découvrez comment vos parfums sont fabriqués </span> 
+          <span lang="en"> Discover more about how your perfume are made </span>
+        </a>
+      </li>
+    </ul>
+</div>
+
 </div>
 
 
