--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -365,7 +365,7 @@ crossorigin=""/>
 
   <hr>
 
-<div>
+<div class="mt-3">
     <span lang="fr"><u>Découvrez nos autres articles :</u></span>
     <span lang="en"><u>Get to read our other articles :</u></span>
     <ul class="particulier">
