--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -357,7 +357,7 @@ crossorigin=""/>
   <p>
     <u><b>Sources:</b></u>
     <br>
-    <ul>
+    <ul style="font-size: 0.8em;">
       <li style="overflow-wrap: break-word;"><a href="https://ec.europa.eu/health/scientific_committees/opinions_layman/perfume-allergies/fr/index.htm#3" target="_blank">https://ec.europa.eu/health/scientific_committees/opinions_layman/perfume-allergies/fr/index.htm#3</a></li>
       <li style="overflow-wrap: break-word;"><a href="https://www.ecomundo.eu/fr/blog/allergenes-cosmetique-conformite" target="_blank">https://www.ecomundo.eu/fr/blog/allergenes-cosmetique-conformite</a></li>
     </ul>
