--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -250,7 +250,7 @@ crossorigin=""/>
     <span lang="en">Find bellow a list of the 26 so-called "probable" allergens, found in the cosmetic regulation and being used in perfumery.</span>
   </p>
 
-  <div class="tableauallergenes col-12">
+  <div class="tableauallergenes col-12" style="font-size: 0.8em;">
     <table class="col-8">
     <caption>
       <span lang="fr">Les 26 allergènes en parfumerie</span>
