--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -272,7 +272,12 @@ crossorigin=""/>
       </thead>
       <tbody>
       <tr>
-        <td>Isométhyl Ionone-Alpha </td>
+        <td>
+          <a class="interpop" href="../ingredients/Isoraldeine_70%C2%AE__Isorald%C3%A9ine_70%C2%AE.html" target="_BLANK">
+          <span lang="fr">Isométhyl Ionone-Alpha</span>
+          <span lang="en"></span>
+          </a>
+        </td>
         <td>127-51-5</td>
         <td>Coumarine</td>
         <td>91-64-5</td>
@@ -376,7 +381,7 @@ crossorigin=""/>
         </a>
       </li>
       <li>
-        <a href="../_/creationparfums.html">
+        <a href="../_/creationparfum.html">
           <span lang="fr"> Découvrez comment vos parfums sont fabriqués </span> 
           <span lang="en"> Discover more about how your perfume are made </span>
         </a>
