--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -273,7 +273,7 @@ crossorigin=""/>
       <tbody>
       <tr>
         <td>
-          <a class="interpop" href="../_/ingredients/Isoraldeine_70%C2%AE__Isorald%C3%A9ine_70%C2%AE.html" target="_BLANK">
+          <a class="interpop" href="../ingredients/Isoraldeine_70®__Isoraldéine_70®.html" target="_BLANK">
           <span lang="fr">Isométhyl Ionone-Alpha</span>
           <span lang="en"></span>
           </a>
