--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -271,21 +271,37 @@ crossorigin=""/>
        </tr>
       </thead>
       <tbody>
+
       <tr>
         <td>
-          <a class="interpop" href="../_/ingredients/Isoraldeine_70®__Isoraldéine_70®.html" target="_BLANK">
+          <a class="interpop" href="../ingredients/Isoraldeine_70®__Isoraldéine_70®.html" target="_BLANK">
           <span lang="fr">Isométhyl Ionone-Alpha</span>
-          <span lang="en"></span>
+          <span lang="en">Isomethyl Ionone-Alpha</span>
           </a>
         </td>
         <td>127-51-5</td>
-        <td>Coumarine</td>
+        <td>
+          <a class="interpop" href="../ingredients/Coumarin__Coumarine.html" target="_BLANK">
+            <span lang="fr">Coumarine</span>
+            <span lang="en">Coumarin</span>
+          </a>
+        </td>
         <td>91-64-5</td>
       </tr> 
       <tr>
-        <td>Aldéhyde Amyl Cinnamique </td>
+        <td>
+          <a class="interpop" href="../ingredients/Jasmonal_A®__Jasmonal_A®.html" target="_BLANK">
+            <span lang="fr">Aldéhyde Amyl Cinnamique</span>
+            <span lang="en">Amyl Cinnamaldehyde</span>
+          </a>
+        </td>
         <td>122-40-7</td>
-        <td>Eugénol</td>
+        <td>
+          <a class="interpop" href="../ingredients/Eugenol__Eugénol.html" target="_BLANK">
+            <span lang="fr">Eugénol</span>
+            <span lang="en">Eugenol</span>
+          </a>
+        </td>
         <td>97-53-0</td>
       </tr> 
       <tr>
