--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -307,19 +307,39 @@ crossorigin=""/>
       <tr>
         <td>Alcool Amyl Cinnamique</td>
         <td>101-85-9</td>
-        <td>Farnésol</td>
+        <td>
+          <a class="interpop" href="../ingredients/Farnesol__Farnésol.html" target="_BLANK">
+            <span lang="fr">Farnésol</span>
+            <span lang="en">Farnesol</span>
+          </a>
+        </td>
         <td>4602-84-0</td>
       </tr>
       <tr>
         <td>Alcool Anisique</td>
         <td>105-13-5</td>
-        <td>Géraniol</td>
+        <td>
+          <a class="interpop" href="../ingredients/Geraniol__Géraniol.html" target="_BLANK">
+            <span lang="fr">Géraniol</span>
+            <span lang="en">Geraniol</span>
+          </a>
+        </td>
         <td>106-24-1</td>
       </tr>
       <tr>
-        <td>Alcool Benzylique</td>
+        <td>
+          <a class="interpop" href="../ingredients/Benzyl_Alcohol__Alcool_Benzylique.html" target="_BLANK">
+            <span lang="fr">Alcool Benzylique</span>
+            <span lang="en">Benzyl Alcohol</span>
+          </a>
+        </td>
         <td>100-51-6</td>
-        <td>Hexyl Cinnamique Aldéhyde</td>
+        <td>
+          <a class="interpop" href="../ingredients/Jasmonal_H®__Jasmonal_H®.html" target="_BLANK">
+            <span lang="fr">Hexyl Cinnamique Aldéhyde</span>
+            <span lang="en">Hexyl Cinnamaldehyde</span>
+          </a>
+        </td>
         <td>101-86-0</td>
       </tr>
       <tr>
