--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -343,13 +343,28 @@ crossorigin=""/>
         <td>101-86-0</td>
       </tr>
       <tr>
-        <td>Benzoate de Benzyl</td>
+        <td>
+          <a class="interpop" href="../ingredients/Benzyl_Benzoate__Benzoate_de_Benzyl.html" target="_BLANK">
+            <span lang="fr">Benzoate de Benzyl</span>
+            <span lang="en">Benzyl Benzoate</span>
+          </a>
+        </td>
         <td>120-51-4</td>
-        <td>Hydroxycitronellal</td>
+        <td>
+          <a class="interpop" href="../ingredients/Hydroxycitronellal__Hydroxycitronellal.html" target="_BLANK">
+            <span lang="fr">Hydroxycitronellal</span>
+            <span lang="en">Hydroxycitronellal</span>
+          </a>
+        </td>
         <td>107-75-5</td>
       </tr>
       <tr>
-        <td>Cinnamate de Benzyl</td>
+        <td>
+          <a class="interpop" href="../ingredients/Benzyl_Cinnamate__Cinnamate_de_Benzyle.html" target="_BLANK">
+            <span lang="fr">Cinnamate de Benzyl</span>
+            <span lang="en">Benzyl Cinnamate</span>
+          </a>
+        </td>
         <td>103-41-3</td>
         <td>Hydroxyisohexyl 3-Cyclohexene Carboxaldéhyde </td>
         <td>31906-04-4</td>
