--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -366,43 +366,108 @@ crossorigin=""/>
           </a>
         </td>
         <td>103-41-3</td>
-        <td>Hydroxyisohexyl 3-Cyclohexene Carboxaldéhyde </td>
+        <td>
+          <a class="interpop" href="../ingredients/Lyral®__Lyral®.html" target="_BLANK">
+            <span lang="fr">Hydroxyisohexyl 3-Cyclohexene Carboxaldéhyde</span>
+            <span lang="en">Hydroxyisohexyl 3-Cyclohexene Carboxaldéhyde</span>
+          </a>
+        </td>
         <td>31906-04-4</td>
       </tr>
       <tr>
-        <td>Salicylate de Benzyl</td>
+        <td>
+          <a class="interpop" href="../ingredients/Benzyl_Salicylate__Salicylate_de_Benzyle.html" target="_BLANK">
+            <span lang="fr">Salicylate de Benzyle</span>
+            <span lang="en">Benzyl Salicylate</span>
+          </a>
+        </td>
         <td>118-58-1</td>
-        <td>Iso Eugénol</td>
+        <td>
+          <a class="interpop" href="../ingredients/Isoeugenol__Iso_Eugénol.html" target="_BLANK">
+            <span lang="fr">Iso Eugénol</span>
+            <span lang="en">Isoeugenol</span>
+          </a>
+        </td>
         <td>97-54-1</td>
       </tr>
       <tr>
-        <td>Butylphenyl Methylpropional</td>
+        <td>
+          <a class="interpop" href="../ingredients/Lilial®__Lilial®.html" target="_BLANK">
+            <span lang="fr">Butylphenyl Methylpropional</span>
+            <span lang="en">Butylphenyl Methylpropional</span>
+          </a>
+        </td>
         <td>80-54-6</td>
-        <td>Limonène-D</td>
+        <td>
+          <a class="interpop" href="../ingredients/D-Limonene__Limonène-D.html" target="_BLANK">
+            <span lang="fr">Limonène-D</span>
+            <span lang="en">D-Limonene</span>
+          </a>
+        </td>
         <td>5989-27-5</td>
       </tr>
       <tr>
-        <td>Aldéhyde Cinnamique</td>
+        <td>
+          <a class="interpop" href="../ingredients/Cinnamaldehyde__Aldéhyde_Cinnamique.html" target="_BLANK">
+            <span lang="fr">Aldéhyde Cinnamique</span>
+            <span lang="en">Cinnamaldehyde</span>
+          </a>
+        </td>
         <td>104-55-2</td>
-        <td>Linalol</td>
+        <td>
+          <a class="interpop" href="../ingredients/Linalool__Linalol.html" target="_BLANK">
+            <span lang="fr">Linalol</span>
+            <span lang="en">Linalool</span>
+          </a>
+        </td>
         <td>78-70-6</td>
       </tr>
       <tr>
-        <td>Alcool Cinnamique</td>
+        <td>
+          <a class="interpop" href="../ingredients/Cinnamyl_Alcohol__Alcool_Cinnamique.html" target="_BLANK">
+            <span lang="fr">Alcool Cinnamique</span>
+            <span lang="en">Cinnamyl Alcohol</span>
+          </a>
+        </td>
         <td>104-54-1</td>
-        <td>2-Octynoate de Méthyle</td>
+        <td>
+          <a class="interpop" href="../ingredients/Folione®__Folione®.html" target="_BLANK">
+            <span lang="fr">2-Octynoate de Méthyle</span>
+            <span lang="en">Methyl 2-Octynoate</span>
+          </a>
+        </td>
         <td>111-12-6</td>
       </tr>
       <tr>
-        <td>Citral</td>
+        <td>
+          <a class="interpop" href="../ingredients/Citral__Citral.html" target="_BLANK">
+            <span lang="fr">Citral</span>
+            <span lang="en">Citral</span>
+          </a>
+        </td>
         <td>5392-40-5</td>
-        <td>Extraits de Mousse de Chêne </td>
+        <td>
+          <a class="interpop" href="../ingredients/Oak_Moss_Absolute__Mousse_de_Chêne_Absolue.html" target="_BLANK">
+            <span lang="fr">Extraits de Mousse de Chêne </span>
+            <span lang="en">Oak Moss Extract</span>
+          </a>
+        </td>
         <td>90028-68-5</td>
       </tr>
       <tr>
-        <td>Citronellol</td>
+        <td>
+          <a class="interpop" href="../ingredients/Citronellol__Citronellol.html" target="_BLANK">
+            <span lang="fr">Citronellol</span>
+            <span lang="en">Citronellol</span>
+          </a>
+        </td>
         <td>106-22-9</td>
-        <td>Extraits de Mousse d’Arbre </td>
+        <td>
+          <a class="interpop" href="../ingredients/Treemoss_Absolute__Mousse_d'arbre_Absolue.html" target="_BLANK">
+            <span lang="fr">Extraits de Mousse d’Arbre </span>
+            <span lang="en">Treemoss Extract</span>
+          </a>
+        </td>
         <td>90028-67-4</td>
       </tr>
       </tbody>
