--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -166,8 +166,8 @@ crossorigin=""/>
 <!-- C'EST ICI QUE COMMENCE LE CODE DE LA PARTIE DE GAUCHE -->
 <div class="col-12 text-center gros_titre">
   <h1 class="gros_titre text-in-color-brown">
-    <span lang="fr">LES ALLERGENES EN PARFUMERIE : UNE PEUR JUSTIFIEE ?</span>
-    <span lang="en">ALLERGENS IN PERFUMERY: A JUSTIFIED FEAR?</span>
+    <span lang="fr">NOS PARFUMS SONT-ILS DANGEREUX ?</span>
+    <span lang="en">ARE OUR PERFUME DANGEROUS ?</span>
   </h1>
 </div>
 
