--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -180,6 +180,10 @@ crossorigin=""/>
     <span lang="en">Is there a reason to fear our perfume ingredients ? Are allergenic compounds dangerous for the costumer ?</span>
   </h2>
 
+    <h2 class="sous_titre">
+      <span lang="fr">Introduction – Les molécules inscrites sur le packaging de nos produits cosmétiques</span>
+      <span lang="en">Introduction – Molecules on our cosmetic products packaging</span>
+    </h2>
   <p>
     <img class="img1allergene" lang="fr" src="../img/loupeallergens.jpg" alt="Packaging produit cosmétique et allergènes" title="Packaging produit cosmétique et allergènes">
     <img class="img1allergene" lang="en" src="../img/loupeallergens.jpg" alt="Packaging cosmetic products and allergens" title="Packaging cosmetic products and allergens">
@@ -189,6 +193,12 @@ crossorigin=""/>
     <span lang="fr"><i>Linalol, Limonène, Eugénol, Salicylate de Benzyl</i>… Vous avez sans doute déjà remarqué le nom de ces molécules sur le packaging de vos produits cosmétiques. Elles sont partout ! Il s’agit de molécules qualifiées « d’<b>allergènes</b> ». Comme souvent, <u>les ingrédients d’origine synthétique, et notamment les allergènes, font peur</u>. Certaines marques créent même des parfums « sans allergènes » afin d’attirer une clientèle soucieuse de sa santé et effrayée par la présence de tant d’ingrédients inconnus. Ces allégations sont surtout mises en place pour rassurer les consommateurs. Or, nous allons voir ici que <u>certains de ces ingrédients ne sont pas nécessairement « dangereux »</u> et que <b class="bplus">leur impact est souvent dramatisé</b></span>
     <span lang="en"><i>Linalool, Limonene, Eugenol, Benzyl Salicylate</i>... You have probably already noticed the names of these molecules on the packaging of your cosmetic products. They're everywhere! They are molecules called "<b>allergens</b>". As is often the case, <u>ingredients of synthetic origin, especially allergens, are frightening</u>. Some brands even create "allergen-free" fragrances to attract health-conscious customers who are afraid of so many unknown ingredients. These claims are mainly put in place to reassure consumers. However, we will see here that <u>some of these ingredients are not necessarily "dangerous"</u> and that <b class="bplus">their impact is often dramatized</b>.</span>
   </p>
+
+
+    <h2 class="sous_titre">
+      <span lang="fr">Un allergène, c’est quoi ?</span>
+      <span lang="en">What is an allergen ?</span>
+    </h2>
 
   <p class="mt-4">
     <span lang="fr">Dans la composition de nos parfums portés et utilisés chaque jour, <b class="bplus">26 allergènes réputés peuvent exister</b>. Cette liste de 26 molécules et extraits est dictée par l’ <a href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target="_blank">annexe III du règlement cosmétique européen 1223/2009</a>. Il s’agit de molécules qui, <b class="bplus">lorsqu'elle sont présentes en quantités importantes</b>, peuvent avoir la faculté de se fixer à une protéine présente dans notre peau. Cela peut entrainer une réaction (cf. schéma ci-dessous) fassant réagir notre système immunitaire et provoquant ainsi une réaction allergique. 
@@ -204,12 +214,20 @@ crossorigin=""/>
     <img class="img2allergene" lang="fr" src="../img/impactallergens.png" alt="Allergènes parfum et réponse immunitaire" title="Allergènes parfum et réponse immunitaire">
     <img class="img2allergene" lang="en" src="../img/impactallergensEN.png" alt="Fragrance allergens and immune response" title="Fragrance allergens and immune response">
   </p>
-
+  
+  <h2 class="sous_titre">
+      <span lang="fr">Qui est allergique ?</span>
+      <span lang="en">who's allergic?</span>
+  </h2>
   <p>
     <span lang="fr"><b class="bplus">En Europe, ces réactions allergiques concernent seulement 1 à 3% de la population.</b> Cela signifie que vous avez une à trois chances sur cent d’être sensible à l'une des 26 substances listées par la réglementation cosmétique. A cela s'ajoute le fait qu'un parfum contient très rarement, voir jamais, ces 26 allergènes ensemble. 
     <span lang="en"><b class="bplus">In Europe, these allergic reactions affect only 1 to 3% of the population.</b> This means that you have one to three chances in one hundred of being sensitive to at least one of the 26 substances listed by the cosmetic regulations.</span>
   </p>
 
+  <h2 class="sous_titre">
+      <span lang="fr">Les mesures pour lutter contre les allergies</span>
+      <span lang="en">Measures taken to struggle against allergy</span>
+  </h2>
 
   <p><img class="img3allergene" src="../img/rincevsnonrince.png" alt="Différences entre un produit rincé et un non-rincé" > </p>
   <p>
@@ -240,6 +258,12 @@ crossorigin=""/>
     <br>In addition, any allergen used at a higher level than the recommended one must be mentioned on the product packaging.</span>
   </p>
 
+
+  <h2 class="sous_titre">
+      <span lang="fr">Que risque-t-on ?</span>
+      <span lang="en">What do we risk ?</span>
+  </h2>
+  
   <p>
     <span lang="fr">Par exemple, dans le cas où votre produit contient sur son packaging la mention de quatre molécules allergènes, sans savoir à quel(s) allergène(s) vous pourriez être allergique, cela signifie que vous avez tout au plus 0,5% de chance de contracter une allergie en utilisant ce produit. Faible, non ?</span>
     <span lang="en">For example, if your product contains four allergenic molecules on its packaging, without knowing to which allergen(s) you might be allergic, this means that you have at most a 0.5% chance of contracting an allergy when using this product. Low, isn't it?</span>
