--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -222,7 +222,7 @@ crossorigin=""/>
       <span lang="en">who's allergic?</span>
   </h2>
   <p>
-    <span lang="fr"><b class="bplus">En Europe, ces réactions allergiques concernent seulement 1 à 3% de la population.</b> Cela signifie que vous avez une à trois chances sur cent d’être sensible à l'une des 26 substances listées par la réglementation cosmétique. A cela s'ajoute le fait qu'un parfum contient très rarement, voir jamais, ces 26 allergènes ensemble. 
+    <span lang="fr"><b class="bplus">En Europe, ces réactions allergiques concernent seulement 1 à 3% de la population.</b> Cela signifie que vous avez une à trois chances sur cent d’être sensible à l'une des 26 substances listées par la réglementation cosmétique. A cela s'ajoute le fait qu'un parfum contient très rarement, voir jamais, ces 26 allergènes ensemble. </span>
     <span lang="en"><b class="bplus">In Europe, these allergic reactions affect only 1 to 3% of the population.</b> This means that you have one to three chances in one hundred of being sensitive to at least one of the 26 substances listed by the cosmetic regulations.</span>
   </p>
 
