--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -219,7 +219,7 @@ crossorigin=""/>
   
   <h2 class="sous_titre">
       <span lang="fr">Qui est allergique ?</span>
-      <span lang="en">who's allergic?</span>
+      <span lang="en">Who's allergic?</span>
   </h2>
   <p>
     <span lang="fr"><b class="bplus">En Europe, ces réactions allergiques concernent seulement 1 à 3% de la population.</b> Cela signifie que vous avez une à trois chances sur cent d’être sensible à l'une des 26 substances listées par la réglementation cosmétique. A cela s'ajoute le fait qu'un parfum contient très rarement, voir jamais, ces 26 allergènes ensemble. </span>
