--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -165,16 +165,34 @@ crossorigin=""/>
 
 <!-- C'EST ICI QUE COMMENCE LE CODE DE LA PARTIE DE GAUCHE -->
 <div class="col-12 text-center gros_titre">
-  <h1 class="gros_titre text-in-color-brown">DECOUVRIR LES TYPES D'INGREDIENTS EN PARFUMERIE</h1>
+  <h1 class="gros_titre text-in-color-brown">
+    <span lang="fr">LES INGREDIENTS DE NOS PARFUMS</span>
+    <span lang="en">PERFUME INGREDIENTS</span></h1>
 </div>
 
 <hr>
 
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
-<p class="mt-3">Dans la composition d’un parfum, il est possible d’utiliser environ <b>3000 ingrédients différents</b>. La connaissance scientifique autour des essences et des molécules odorantes en recense cependant bien plus. Toutes constituent la <u>palette du parfumeur</u> : cet alphabet qu’il utilise pour raconter des histoires à travers ses parfums.
-<br>Quelles sont ces matières premières ? Comment les obtient-on ? Quels en sont les particularités et comment cela influe leur utilisation ? Entrez dans l’univers passionnant des odeurs !
-Pour commencer, il existe trois types de matières premières utilisées dans les parfums :
+  <h2 class="sous_titre mt-3">
+    <span lang="fr">Comment sont fabriqués les ingrédients qui composent nos parfums ? Du naturel au synthétique, découvrez comment sont faits vos parfums.</span>
+    <span lang="en">How are perfume ingredients made ? From natural to synthetic ingredients, discover how perfumes are made.</span>
+  </h2>
+  <h2 class="sous_titre mt-3">
+    <span lang="fr">Introduction – Ces ingrédients qui font la composition de nos parfums.</span>
+    <span lang="en">Introduction – Ingredients constituting our perfumes.</span>
+  </h2>
+
+<p>
+  <span lang="fr">Dans la composition d’un parfum, il est possible d’utiliser environ <b class="bplus">3000 ingrédients différents</b>. La connaissance scientifique autour des essences et des molécules odorantes en recense cependant bien plus. Toutes constituent la <u>palette du parfumeur</u> : cet alphabet qu’il utilise pour raconter des histoires à travers ses parfums.
+  <br>Quelles sont ces matières premières ? Comment les obtient-on ? Quels en sont les particularités et comment cela influe sur leur utilisation ? Entrez dans l’univers passionnant des odeurs ! 
+  <br class="mt-2">Pour commencer, il existe <b class="bplus">trois types de matières premières</b> utilisées dans les parfums :</span>
+
+  <span lang="en">In a perfume composition, it is possible to use around <b class="bplus">3000 different ingredients</b>. However, the scientific knowledge of essences and odorant molecules contains many more ingredients. They all make up the <u>perfumer's palette</u>: the alphabet he uses to tell stories through his fragrances.
+  <br>What are these raw materials? How are they obtained? What are their particularities and how does that influence their use? Enter the exciting world of scents !
+  <br class="mt-2">First, their are <b class="bplus">three types of raw materials</b> used in perfumes</span>
+</p>  
+
 <ul>
   <li><b>Les ingrédients naturels</b>: Elles résultent de l’extraction d’un végétal ou, anciennement, d’une matière animale.</li>
   <li><b>Les ingrédients synthétiques</b>: Elles sont obtenues grâce à la (bio)chimie organique.</li>
