--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -191,14 +191,22 @@ crossorigin=""/>
   <span lang="en">In a perfume composition, it is possible to use around <b class="bplus">3000 different ingredients</b>. However, the scientific knowledge of essences and odorant molecules contains many more ingredients. They all make up the <u>perfumer's palette</u>: the alphabet he uses to tell stories through his fragrances.
   <br>What are these raw materials? How are they obtained? What are their particularities and how does that influence their use? Enter the exciting world of scents !
   <br class="mt-2">First, their are <b class="bplus">three types of raw materials</b> used in perfumes</span>
-</p>  
 
-<ul>
-  <li><b>Les ingrédients naturels</b>: Elles résultent de l’extraction d’un végétal ou, anciennement, d’une matière animale.</li>
-  <li><b>Les ingrédients synthétiques</b>: Elles sont obtenues grâce à la (bio)chimie organique.</li>
-  <li><b>Les bases</b>: Ce sont des compositions parfumées, un ingrédient crée préalablement par un parfumeur et qui contient, lui aussi, plusieurs ingrédients.</li>
-</ul>
-</p>  
+  <ul style="font-size: 0.8em;">
+    <li>
+      <span lang="fr"><b class="bplus">Les ingrédients naturels</b>: Elles résultent de l’extraction d’un végétal ou, anciennement, d’une matière animale.</span>
+      <span lang="en"><b class="bplus">Natural ingredients:</b> They result from the extraction of a plant or, formerly, an animal material.</span>
+    </li>
+    <li>
+      <span lang="fr"><b class="bplus">Les ingrédients synthétiques</b>: Elles sont obtenues grâce à la (bio)chimie organique.</span>
+      <span lang="en"><b class="bplus">Synthetic ingredients</b>: They are obtained through organic (bio)chemistry.</span>
+    </li>
+    <li>
+      <span lang="fr"><b class="bplus">Les bases</b>: Ce sont des compositions parfumées, un ingrédient crée préalablement par un parfumeur et qui contient, lui aussi, plusieurs ingrédients.</span>
+    </li>
+  </ul>
+</p>
+
 <p>Etudions plus en détails l'ensemble de ces catégories et leurs spécificités :</p>
 <ol type="I">
   <li><u><b>LES INGREDIENTS NATURELS</b></u>: 
