--- a/html/_/ingredientparfums.html
+++ b/html/_/ingredientparfums.html
@@ -211,6 +211,7 @@ crossorigin=""/>
 <p>
   <span lang="fr">Etudions plus en détails l'ensemble de ces catégories et leurs spécificités :</span>
   <span lang="en">Let's take a closer look at all of these categories and their specificities:</span>
+
   <ol type="I">
     <li>
       <u><b>
@@ -218,55 +219,56 @@ crossorigin=""/>
         <span lang="en">NATURAL INGREDIENTS:</span>
       </b></u> 
       <p>
-        <span lang="fr">Ce types d'ingrédient a toujours eu la cote dans les parfums. Néanmoins, bien qu’ils soient très prisés des parfumeurs et des consommateurs, ils présentent plusieurs désavantages. 
-        <br>La grande majorité des matières premières naturelles sont issues de <b>végétaux</b>. Il était autrefois possible d’utiliser des matières premières <b>animales</b>, mais elles sont aujourd’hui <u>disparues pour des raisons d’éthique et de réglementation</u>. </span>
+        <span lang="fr">Ce types d'ingrédient a toujours eu la cote dans les parfums. Néanmoins, bien qu’ils soient très prisés des parfumeurs et des consommateurs, ils présentent plusieurs désavantages. La grande majorité des matières premières naturelles sont issues de <b>végétaux</b>. Il était autrefois possible d’utiliser des matières premières <b>animales</b>, mais elles sont aujourd’hui <u>disparues pour des raisons d’éthique et de réglementation</u>. </span>
 
-        <span lang="en">This type of ingredient has always been popular in perfumes. Nevertheless, although they are cherished by perfumers and consumers, they have several disadvantages.
-        <br>The vast majority of natural raw materials are derived from <b>plants</b>. It was once possible to use <b>animal</b>-sourced raw materials, but they have <u>now disappeared for ethical and regulatory reasons.</u></span>
+        <span lang="en">This type of ingredient has always been popular in perfumes. Nevertheless, although they are cherished by perfumers and consumers, they have several disadvantages.The vast majority of natural raw materials are derived from <b>plants</b>. It was once possible to use <b>animal</b>-sourced raw materials, but they have <u>now disappeared for ethical and regulatory reasons.</u></span>
 
         <p class="exemple">
           <span lang="fr"><u>Exemple:</u> L’ambre gris est une déjection sécrétée par le cachalot, et rejetée dans son habitat, puis retrouvée sur certaines plages. Son odeur en séchant est très sensuelle, ambrée et particulièrement appréciée des parfumeurs pour construire les notres de fond de leur parfum. Aujourd'hui, cette matière emblématique est remplacée par des molécules dites « ambrées » (<a class="interpop" href="../ingredients/Ambroxan®__Ambroxan®.html" target="_blank">Ambroxan®</a>, <a class="interpop" href="../ingredients/Iso_E_Super®__Iso_E_Super®.html" target="_blank">Iso E Super®</a>, <a class="interpop" href="../ingredients/Grisalva®__Grisalva®.html" target="_blank">Grisalva®</a>…). De même, le <a class="interpop" href="../ingredients/Castoreum_Resinoid__Castoréum_Résinoïde.html" target="_blank">castoréum</a> est un baume sécrété par le castor (trouvable au Canada ou en Sibérie), dans une poche sous son anus. L’extraction de l'odeur de cette poche permettait d’obtenir une résine, très odorante. Aujourd’hui, cette matière première est remplacée par des bases imitatrices de son odeur.</span>
           <span lang="en"><u>Example:</u> Ambergris is a dejecta secreted by the sperm whale, which is released into its habitat and then found on certain beaches. Its scent when drying is very sensual and particularly appreciated by perfumers to build the base notes of their perfumes. Today, this emblematic material is replaced by so-called "amber" molecules (<a class="interpop" href="../ingredients/Ambroxan®__Ambroxan®.html" target="_blank">Ambroxan®</a>, <a class="interpop" href="../ingredients/Iso_E_Super®__Iso_E_Super®.html" target="_blank">Iso E Super®</a>, <a class="interpop" href="../ingredients/Grisalva®__Grisalva®.html" target="_blank">Grisalva®</a>…). Similarly, <a class="interpop" href="../ingredients/Castoreum_Resinoid__Castoréum_Résinoïde.html" target="_blank">castoreum</a> is a balm secreted by the beaver (found in Canada or Siberia), in a pouch under its anus. The extraction of this pouch allows to obtain a very fragrant resin. Today, this raw material is replaced by bases that imitate its smell.</span>
         </p>
       </p>
-      <p>Les matières premières issues de végétaux se distinguent en plusieurs catégories :</p>
-      <ul>
-        <li><span class="catégories">Les huiles essentielles :</span>
-          <ol>
-            <li><span class="catégories2">Les distillations :</span>
-              <br>Obtenues par entrainement à la vapeur d’eau des composés odorants de la plante. La vapeur d’eau possède effectivement la faculté de se mélanger aux composés odorants, pour s’en séparer par décantation à l’état liquide après condensation des vapeurs.
-            </li>
-            <li><span class="catégories2">Les distillations sèches : </span>
-              <br>Pour la cade (un conifère) et le bouleau (un bois), l’huile essentielle est obtenue par distillation sèche. Cela consiste en une pyrogénation du bois sous une très forte température (800°C environ) dans un four, puis une distillation du goudron récupéré, pour n’obtenir que les composés odorants issus de ce procédé.
-            </li>
-            <li><span class="catégories2">Les expressions :</span>
-              <br>Pour les agrumes, leur huile essentielle est obtenue par expression à froid : le zeste est exprimé, puis l’huile est séparée de l’eau résultante par centrifugation.
-            </li>
-          </ol>
-        </li>    
-        <li><span class="catégories">Les concrètes et absolues : </span>
-          <ol>
-            <li><span class="catégories2">Les concrêtes :</span>
-                <br>Les <b>absolues</b> résultent de l’extraction d’une <b>plante fraiche</b>. Il peut s’agir d’une fleur (Rose de Mai Absolue), d’une fève (Fève Tonka Absolue), d’une graine (Fenugrec Absolue)… Cette extraction se déroule en plusieurs étapes. La première consiste à plonger le végétal dans un solvant organique tel que l’hexane ou l’éther de pétrole. Après extraction, retrait des plantes (on dit alors qu’elles sont « épuisées ») et évaporation du solvant, on obtient une <b>concrète</b>. C’est une pâte, car elle comprend les cires de la plante, qui ont aussi été extraites par le solvant utilisé. Pour rendre la concrète utilisable en parfumerie, il faut la diluer dans l’alcool, puis refroidir le mélange pour précipiter les cires, et les filtrer. Après évaporation du solvant, le produit obtenu est liquide, parfois visqueux, et limpide : c’est l’absolue.
-            </li>
-            <li><span class="catégories2">Les absolues :</span> 
-            </li>
-          </ol>     
-        </li>
-        <li><span class="catégories">Les baumes et les résinoïdes : </span>
-          <ol>
-            <li><span class="catégories2">Les résinoïdes :</span>
-              <br>Les résinoïdes résultent de l’extraction d’un produit sec. Il s’agit souvent de résines d’arbres (Benjoin Siam Résinoïde). Leur extraction consiste à solubiliser les composés odorants de la résine dans de l’alcool, de refroidir le mélange pour précipiter les cires, puis de filtrer et d’évaporer le solvant. Le produit obtenu est liquide, parfois très visqueux. Ces résines sont souvent aussi extractibles à la vapeur d’eau, pour obtenir une huile essentielle (Encens HE).
-            </li>
-            <li><span class="catégories2">Les baumes :</span>
-            </li>
-          </ol>  
-        </li>
-        <li><span class="catégories">Les extraits CO<sub>2</sub> supercritique : </span>
-            <br>Ces ingrédients résultent de la mise en contact d’un végétal quelconque (il peut même s’agir de certains fruits, habituellement non extraits) avec du dioxyde de carbone à plus de 31°C et sous 74 bar de pression. Mettre le CO2 sous cette forme est coûteux, mais ce type d’extraction fourni un résultat olfactif sans égal, et offre à la palette du parfumeur des extraits d’une grande qualité.        
-        </li>
-      </ul>
-      <br>
+      <p>
+        <span lang="fr">Les matières premières issues de végétaux se distinguent en plusieurs catégories :</span>
+        <span lang="en">Plant-sourced raw materials are divided in a few categories :</span>
+        <ul style="font-size: 0.8em;">
+          <li>
+            <span class="catégories">Les huiles essentielles :</span>
+            <ol>
+              <li><span class="catégories2">Les distillations :</span>
+                <br>Obtenues par entrainement à la vapeur d’eau des composés odorants de la plante. La vapeur d’eau possède effectivement la faculté de se mélanger aux composés odorants, pour s’en séparer par décantation à l’état liquide après condensation des vapeurs.
+              </li>
+              <li><span class="catégories2">Les distillations sèches : </span>
+                <br>Pour la cade (un conifère) et le bouleau (un bois), l’huile essentielle est obtenue par distillation sèche. Cela consiste en une pyrogénation du bois sous une très forte température (800°C environ) dans un four, puis une distillation du goudron récupéré, pour n’obtenir que les composés odorants issus de ce procédé.
+              </li>
+              <li><span class="catégories2">Les expressions :</span>
+                <br>Pour les agrumes, leur huile essentielle est obtenue par expression à froid : le zeste est exprimé, puis l’huile est séparée de l’eau résultante par centrifugation.
+              </li>
+            </ol>
+          </li>    
+          <li><span class="catégories">Les concrètes et absolues : </span>
+            <ol>
+              <li><span class="catégories2">Les concrêtes :</span>
+                  <br>Les <b>absolues</b> résultent de l’extraction d’une <b>plante fraiche</b>. Il peut s’agir d’une fleur (Rose de Mai Absolue), d’une fève (Fève Tonka Absolue), d’une graine (Fenugrec Absolue)… Cette extraction se déroule en plusieurs étapes. La première consiste à plonger le végétal dans un solvant organique tel que l’hexane ou l’éther de pétrole. Après extraction, retrait des plantes (on dit alors qu’elles sont « épuisées ») et évaporation du solvant, on obtient une <b>concrète</b>. C’est une pâte, car elle comprend les cires de la plante, qui ont aussi été extraites par le solvant utilisé. Pour rendre la concrète utilisable en parfumerie, il faut la diluer dans l’alcool, puis refroidir le mélange pour précipiter les cires, et les filtrer. Après évaporation du solvant, le produit obtenu est liquide, parfois visqueux, et limpide : c’est l’absolue.
+              </li>
+              <li><span class="catégories2">Les absolues :</span> 
+              </li>
+            </ol>     
+          </li>
+          <li><span class="catégories">Les baumes et les résinoïdes : </span>
+            <ol>
+              <li><span class="catégories2">Les résinoïdes :</span>
+                <br>Les résinoïdes résultent de l’extraction d’un produit sec. Il s’agit souvent de résines d’arbres (Benjoin Siam Résinoïde). Leur extraction consiste à solubiliser les composés odorants de la résine dans de l’alcool, de refroidir le mélange pour précipiter les cires, puis de filtrer et d’évaporer le solvant. Le produit obtenu est liquide, parfois très visqueux. Ces résines sont souvent aussi extractibles à la vapeur d’eau, pour obtenir une huile essentielle (Encens HE).
+              </li>
+              <li><span class="catégories2">Les baumes :</span>
+              </li>
+            </ol>  
+          </li>
+          <li><span class="catégories">Les extraits CO<sub>2</sub> supercritique : </span>
+              <br>Ces ingrédients résultent de la mise en contact d’un végétal quelconque (il peut même s’agir de certains fruits, habituellement non extraits) avec du dioxyde de carbone à plus de 31°C et sous 74 bar de pression. Mettre le CO2 sous cette forme est coûteux, mais ce type d’extraction fourni un résultat olfactif sans égal, et offre à la palette du parfumeur des extraits d’une grande qualité.        
+          </li>
+        </ul>
+      </p>
       <p>Il existe beaucoup d’autres méthodes d’extraction aboutissant sur d'autres catégories d'ingrédients, que nous ne détaillerons pas ici car leur présence n'est pas très courante (hydrolats, exhudats, tintures, infusions, terpene-less, paumades et autres produits issues de distillations moléculaires ou encore les produits modifiés chimiquement après extraction.).</p>
 
       <p>Ainsi, les matières premières naturelles forment environ un tiers de la palette du parfumeur (sans compter les bases). Elles servent souvent de point de départ d’une création de parfum. Le parfumeur choisi en effet souvent plusieurs matières premières naturelles pour son parfum, autour de laquelle il fait graviter des matières premières synthétiques, pour leur donner les nuances souhaitées.
